--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@
     padding: 0;
 }
 
-
-
-
 .cabecalho {
     background-color: #424E61;
     color: white;
@@ -23,4 +20,24 @@
     display: inline-block;
     margin: 0 16px;
     font-size: 24px;
+}
+
+.escola-imagem{
+    width: 25%;
+}
+
+.Escola{
+    background-image: linear-gradient(#424E61,#4ebfe9);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.escola-div-conteudo{
+    width: 35%;
+}
+.escola-titulo{
+    padding: 24px 0;
 }
